feature: change style

--- a/src/content/posts/2026/02/rosydawn-blog-framework/index.mdx
+++ b/src/content/posts/2026/02/rosydawn-blog-framework/index.mdx
@@ -2,7 +2,7 @@
 title: "Rosydawn：一个极简但是完整的 Astro 博客框架"
 date: 2026-02-08
 description: "介绍 Rosydawn 博客框架的架构设计、核心特性与自动化部署能力，包括基于 Cron 的 Git 自动部署和 HTTPS 证书管理。"
-tags: ["Astro"]
+tags: ["rosydawn"]
 ---
 
 这是 Rosydawn 博客框架的介绍文档。
