feature: header footer 组件化

--- a/src/content/posts/2026/02/rosydawn-blog-framework/index.mdx
+++ b/src/content/posts/2026/02/rosydawn-blog-framework/index.mdx
@@ -1,11 +1,10 @@
 ---
 title: "Rosydawn：一个极简但是完整的 Astro 博客框架"
 date: 2026-02-08
-description: "介绍 Rosydawn 博客框架的架构设计、核心特性与自动化部署能力，包括基于 Cron 的 Git 自动部署和 HTTPS 证书管理。"
+description: "一句话概括 Rosydawn： 一个基于 Astro 进行构建，完全由 AI 设计和开发实现的博客框架，集成了一键部署、自动化部署、https 集成等等能力。"
 tags: ["rosydawn"]
 ---
 
-这是 Rosydawn 博客框架的介绍文档。
 一句话概括 Rosydawn： 一个基于 Astro 进行构建，完全由 AI 设计和开发实现的博客框架，集成了一键部署、自动化部署、https 集成等等能力。
 
 ## 核心特性
