feature:plantuml render

--- a/src/content/posts/2026/02/rosydawn-blog-framework/index.mdx
+++ b/src/content/posts/2026/02/rosydawn-blog-framework/index.mdx
@@ -30,7 +30,7 @@ tags: ["rosydawn"]
 语言: TypeScript
 样式: Scoped CSS (无预处理器)
 代码高亮: Shiki (内置于 Astro, 支持双主题)
-图表: astro-plantuml
+图表: PlantUML (自定义 remark 插件)
 部署: Nginx + Let's Encrypt (自动化脚本)
 开发模式: OpenSpec SDD (Spec-Driven Development)
 ```
